# ruvector

crates/mcp-brain-server/src/: pipeline.rs
crates/ruvector-core/: Cargo.toml
crates/ruvector-core/src/: embeddings.rs  lib.rs
crates/ruvllm/: Cargo.toml
crates/ruvllm-wasm/: Cargo.toml
crates/ruvllm/benches/: moe_bench.rs
crates/ruvllm/src/: lib.rs
crates/ruvllm/src/moe/: affinity.rs  metrics.rs  precision_allocator.rs  router.rs  sram_mapper.rs
crates/ruvllm/tests/: moe_integration.rs
crates/rvf/rvf-node/npm/win32-x64-msvc/: rvf-node.win32-x64-msvc.node
docs/: moe-routing-optimization-analysis.md
docs/adr/: ADR-040-causal-atlas-rvf-runtime-planet-detection.md  ADR-040b-microlensing-graphcut-extensions.md  ADR-084-ruvllm-wasm-publish.md  ADR-090-implementation-checklist.md  ADR-090-ultra-low-bit-qat-pi-quantization-ddd.md  ADR-091-implementation-checklist.md  ADR-091-int8-cnn-quantization-ddd.md  ADR-092-moe-memory-aware-routing-ddd.md  ADR-114-ruvector-core-hash-placeholders.md  ADR-115-common-crawl-temporal-compression.md
docs/reviews/: RUVLLM_ARCHITECTURE_REVIEW.md  RUVLLM_OPTIMIZATION_CHECKLIST.md  RUVLLM_REVIEW_INDEX.md  RUVLLM_REVIEW_SUMMARY.md  RUVLLM_UNSAFE_CODE_AUDIT.md
examples/rvf/: Cargo.toml
examples/rvf/data/: confirmed_planets.csv  earthquakes.csv  global_temp_anomaly.csv
examples/rvf/examples/: exomoon_graphcut.rs  microlensing_detection.rs  planet_detection.rs  real_data_discovery.rs
